--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Blueprint: On Scroll Effect Layout</title>
+		<title>- Martin Luther King -</title>
 		<meta name="description" content="Blueprint: On Scroll Effect Layout" />
 		<meta name="keywords" content="on scroll, effect, slide in, layout, template, transition, javascript" />
 		<meta name="author" content="Codrops" />
@@ -16,20 +16,16 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
-				<h1>On Scroll Effect Layout</h1>
-				<nav>
-					<a href="http://tympanus.net/Blueprints/ResponsiveIconGrid/" class="bp-icon bp-icon-prev" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
-					<a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a>
-					<a href="http://tympanus.net/codrops/?p=15962" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
-					<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
-				</nav>
+				<span>- Martin Luther King -</span>
+				<h1>Le plus jeune Prix Nobel de la Paix</h1>
+
 			</header>
 			<div id="cbp-so-scroller" class="cbp-so-scroller">
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Lemon drops</h2>
-						<p>Fruitcake toffee jujubes. Topping biscuit sesame snaps jelly caramels jujubes tiramisu fruitcake. Marzipan tart lemon drops chocolate sesame snaps jelly beans.</p>
+						<h2>Biographie</h2>
+						<p>Né à Atlanta le 15 janvier 1929, Martin Luther King après des études de théologie devient pasteur dans une église baptiste de Montgomery, dans l’Alabama en 1955.
+A cette époque, la ségrégation entre blancs et noirs reste très répendue aux Etats-Unis. Le 1er décembre 1955, Rosa Parks refuse de céder sa place à un blanc dans un autobus de Montgomery et se fait interpeller par la police. C’est pour refuser cet état de fait que les personnalités noires de Montgomery lancent un appel au boycott de la compagnie de bus de la ville. Une organisation est créée et Martin Luther King est élu à sa tête. Pendant presque un an, le boycott se poursuivra malgré les tentatives d’intimidation concentrées sur Luther King : attentat contre son domicile, emprisonnement. Enfin, la Cour Suprême des Etats-Unis donne tort à la compagnie de bus. </p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/01.jpg" alt="img01">
@@ -40,14 +36,20 @@
 						<img src="images/02.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Plum caramels</h2>
-						<p>Lollipop powder danish sugar plum caramels liquorice sweet cookie. Gummi bears caramels gummi bears candy canes cheesecake sweet roll icing dragée. Gummies jelly-o tart. Cheesecake unerdwear.com candy canes apple pie halvah chocolate tiramisu.</p>
+						<h2></h2>
+						<p>Fort de cette victoire, il décide d’étendre à l’ensemble du pays sa lutte non-violente pour les droits civiques des noirs. Participant à des actions non-violentes, il est emprisonné à plusieurs reprises.
+Le 28 août 1963, Martin Luther King prend la tête de la marche sur Washington pour le travail et la liberté. Devant 250 000 personnes, il prononce son célèbre discours connu sous le nom « I have a dream » (« Je fais un rêve »). Il appelle de ses vœux un pays où chacun partagerait les mêmes droits dans la justice et la paix.
+Il est reçu par le président Kennedy et reçoit le Prix Nobel de la Paix en 1964.
+Alors qu’il prépare une nouvelle marche contre la pauvreté, il est assassiné sur le balcon de sa chambre d’hôtel à Memphis le 4 avril 1968
+
+Militant non-violent pour les droits civiques des noirs, Martin Luther King a joué un rôle majeur pour l’émancipation des Afro-américains et la prise de conscience de l’injustice de la ségrégation aux Etats-Unis.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Marzipan gingerbread</h2>
-						<p>Soufflé bonbon jelly cotton candy liquorice dessert jelly bear claw candy canes. Pudding halvah bonbon marzipan powder. Marzipan gingerbread sweet jelly.</p>
+						<h2>I have a dream</h2>
+						<p>I have a dream est le nom donné au discours prononcé le 28 août 1963 par le pasteur et militant américain Martin Luther King, devant le Lincoln Memorial, à Washington, D.C., durant la Marche sur Washington pour l'emploi et la liberté. Devant plus de 250 000 manifestants, King en appelle solennellement à la fin du racisme aux États-Unis et revendique l'égalité des droits civiques et économiques entre Blancs et Afro-Américains. Point d'orgue du Mouvement des droits civiques, le discours est généralement considéré comme l'un des plus importants du XXe siècle.
+						<br><br>“J'ai le rêve qu'un jour mes quatre enfants vivront dans une nation où ils ne seront pas jugés pour la couleur de leur peau, mais pour leur caractère.”</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/03.jpg" alt="img01">
@@ -58,14 +60,15 @@
 						<img src="images/04.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Carrot cake</h2>
-						<p>Sesame snaps sweet wafer danish. Chupa chups carrot cake icing donut halvah bonbon. Chocolate cake candy marshmallow pudding dessert marzipan jujubes sugar plum.</p>
+						<h2>Une influence déclinante</h2>
+						<p>Pourtant, son influence tend à diminuer au sein de la communauté afro-américaine. Originaire du sud des Etats-Unis, il a toujours lutté pour l'égalité,  la reconnaissance et l'intégration d’une communauté issue de l'esclavage et plutôt rurale. Mais les idées plus radicales et plus violentes de Malcom X gagnent. Le rejet de la communauté noire a désormais un nouveau visage : les banlieues extrêmement pauvres et violentes des grandes villes. Et l’assassinat de Kennedy, perçu comme un défenseur des noirs, donne peu de place à l’espoir. Ainsi Luther King paraît quelque peu en retrait et impuissant face aux émeutes de Watt à Los Angeles. Toutefois, il est aux cotés du président Johnson en 1965 lorsque celui-ci signe le « Voting Rights Act » qui garantit l’égalité civique.</p>
 					</article>
 				</section>
 				<section class="cbp-so-section">
 					<article class="cbp-so-side cbp-so-side-left">
-						<h2>Pudding lollipop</h2>
-						<p>Chupa chups pudding lollipop gummi bears gummies cupcake pie. Cookie cotton candy caramels. Oat cake dessert applicake. Sweet roll tiramisu sweet roll sweet roll.</p>
+						<h2>Guerre du Vietnam</h2>
+						<p>Le 4 avril 1967, un an avant sa mort, Martin Luther King prononce à New-York un discours historique : « Au-delà du Viêt Nam : le moment de briser le silence ».  Il y dénonce l'attitude des États-Unis au Viêt Nam, les exactions commises, insiste sur le fait « qu'ils occupent le pays comme une colonie américaine », qualifie le gouvernement américain de « plus grand fournisseur de violence dans le monde aujourd'hui », et appelle à un grand changement moral aux Etats-Unis.
+</p>
 					</article>
 					<figure class="cbp-so-side cbp-so-side-right">
 						<img src="images/05.jpg" alt="img01">
@@ -76,8 +79,9 @@
 						<img src="images/06.jpg" alt="img01">
 					</figure>
 					<article class="cbp-so-side cbp-so-side-right">
-						<h2>Soufflé bonbon</h2>
-						<p>Cake cotton candy lollipop. Cake croissant cheesecake candy sugar plum icing apple pie wafer. Pie sugar plum tiramisu tiramisu pie fruitcake candy icing. Candy icing gummies gummies cheesecake brownie lemon drops chocolate gingerbread.</p>
+						<h2>Assassinat de Martin Luther King</h2>
+						<p>Le 4 avril 1968 vers 18h00, le pasteur Martin Luther King s’écroule devant sa chambre de motel à Memphis, tué d’une balle de fusil en pleine mâchoire. Il était venu défendre la grève déclenchée par les éboueurs de la ville, à majorité noire. Le coup de feu semble venir d’un immeuble en face, et les policiers s’empressent d’aller faire une razzia en ordre. Mais le tueur a déjà pris la fuite à bord d’une Mustang blanche. Les forces de l’ordre mettent à jour un fusil soigneusement emballé, des sous-vêtements, un journal et une paire de jumelle. Quelques empreintes digitales sont également retrouvées sur l’arme et dans la pièce. Les policiers découvrent alors que l’arme a été achetée par une certain Harvey Lowmeyer dans une armurerie de Birmingham, et que la chambre a été louée par John Willard. Mais après quelques vérifications, il s’avère que Willard et Lowmeyer ne font qu’un. Il s’agit de James Earl Ray, un évadé du pénitencier du Missouri. Une coopération américano-anglo-canadienne permettra d’arrêter le fugitif un mois plus tard à Londres.
+</p>
 					</article>
 				</section>
 			</div>
